public static class Define
{
    public const string CARD_INIT_ANIM_SPIN = "Spin";
    public const string CARD_INIT_ANIM_WAVE = "Wave";
    public const string CARD_ANIM_FLIP_0    = "CardFlip_0";
    public const string CARD_ANIM_FLIP_1    = "CardFlip_1";
    public const string CARD_ANIM_MATCHED   = "Matched";
    public const string CARD_ANIM_RESET     = "Reset";

    public const int BGM_MENU = 0;
    public const int BGM_GAME = 1;
    public const int BGM_RESULT = 2;
    public const int BGM_CREDIT = 3;

    public const int UI_BUTTON_CLICK_SFX = 0;
    public const int UI_BUTTON_SELECT_FIRST_SFX = 1;
    public const int UI_BUTTON_SELECT_SECOND_SFX = 2;
    public const int UI_BUTTON_GAME_MENU_SFX = 3;

    public const int GAME_CARD_MATCHED_SFX = 4;
    public const int GAME_CARD_FAILED_SFX  = 5;

    public const int UI_RTAN_SUPIRISED_SFX_0 = 6;
    public const int UI_RTAN_SUPIRISED_SFX_1 = 7;

    public const int GAME_CARD_INITAL_SFX   = 8;
    public const int GAME_CARD_PLAYED_SFX_0 = 9;
    public const int GAME_CARD_PLAYED_SFX_1 = 10;

    public const string SCENE_LOGO_STR   = "LogoScene";
    public const string SCENE_MENU_STR   = "MenuScene";
    public const string SCENE_GAME_STR   = "GameScene";
    public const string SCENE_RESULT_STR = "ResultScene_Additive";
    public const string SCENE_CREDIT_STR = "CreditScene";
}
